# linkedin-madlibs

./: .gitignore  CONTRIBUTING.md  Justfile  README.md  cabal.project.local  linkedin-madlibs.cabal  shake.hs  stack.yaml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
mad-src/: linkedin-madlibs.mad
src/: Lib.hs  Main.hs
web-src/: index.html
