cabal-version: 1.18
name: linkedin-madlibs
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2017-2018 Vanessa McHale
maintainer: vanessa.mchale@iohk.io
author: Vanessa McHale
synopsis: Linkedin madlibs
description:
    Linkedin madlibs written with Miso + Madlang
category: Web
build-type: Simple
extra-source-files:
    mad-src/linkedin-madlibs.mad
extra-doc-files: README.md

source-repository head
    type: git
    location: https://github.com/vmchale/linkedin-madlibs

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

executable linkedin-madlibs
    main-is: Lib.hs
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
                 -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    
    build-depends:
        base >=4.7 && <5,
        miso >=0.9.0.0,
        madlang >=3.0.0.1,
        text -any,
        containers -any,
        file-embed -any
    if flag(development)
        ghc-options: -Werror
